--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body {
   text-decoration: underline;
 }
 .header__menu--item img {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
 }
 .header__menu--profile .profile__options {
   display: none;
@@ -75,6 +75,70 @@ body {
   box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
   border: 1px solid #b3b3b3;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.profile__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+.profile__header img {
+  width: 80px;
+  height: 80px;
+}
+.profile__header--name {
+  font-size: 16px;
+}
+.profile__header--email {
+  font-size: 14px;
+  color: #5f6368;
+  margin: 5px 0px;
+}
+.profile__header--input {
+  width: 70%;
+  background-color: white;
+  border: 1px solid #b3b3b3;
+  height: 40px;
+  margin: 10px 0px;
+  border-radius: 20px;
+  text-align: center;
+  color: #5f6368;
+}
+.profile__header--input:hover,
+.profile__header--input:focus,
+.profile__main--item:hover,
+.profile__main--item:focus {
+  background-color: #f2f2f2;
+}
+.profile__main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-bottom: 1px solid #e4e4e4;
+}
+.profile__main--item {
+  width: 100%;
+  display: flex;
+  padding: 10px 30px;
+}
+.profile__main--icon{
+  padding: 12px;
+}
+.profile-main__item--info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  color: #5f6368;
+}
+.profile-main__item--name {
+  font-size: 15px;
+}
+.profile-main__item--email {
+  font-size: 13px;
 }
 .main {
   display: flex;
@@ -85,25 +149,44 @@ body {
   align-items: center;
   width: 100%;
 }
-.main__input {
+.main__search {
   background-color: white;
   border: 1px solid #d9d6d9;
   border-radius: 30px;
-  height: 50px;
-  padding-left: 10px;
+  height: 44px;
+  padding: 0px 10px;
   width: 40%;
   margin: 30px 0px;
+  display: flex;
 }
-.main__input:hover {
+.main__search:hover,
+.main__search:focus {
   -webkit-box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
   -moz-box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
   box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
 }
-.main__input:focus {
+.main__buttons--options:hover,
+.main__buttons--options:focus {
+  -webkit-box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.44);
+  -moz-box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.44);
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.44);
+}
+.main__search--icon {
+  height: 30px;
+  display: flex;
+  margin: 7px;
+  padding: 5px 0px;
+}
+.main__search--input {
+  flex: 1;
+  border: none;
+  font-size: 16px;
+}
+.main__search--input:focus {
   outline: none;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
-  box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
+}
+.main__search--voince {
+  margin-left: auto;
 }
 .main__buttons {
   display: flex;
@@ -131,13 +214,16 @@ body {
   margin-top: auto;
   display: flex;
   flex-direction: column;
-  padding: 0px 20px;
   justify-content: center;
+  font-size: 14px;
+  border: 1px solid #e4e4e4;
 }
 .footer__country {
   display: flex;
   flex: 1;
+  width: 100%;
   align-items: center;
+  border-bottom: 1px solid #e4e4e4;
 }
 .footer__links {
   display: flex;
@@ -147,4 +233,12 @@ body {
 }
 .footer__links ul li {
   display: inline-block;
+}
+.footer a,
+.footer p {
+  color: #5f6368;
+  margin-left: 20px;
+}
+.footer ul:last-child a:last-child {
+  margin-right: 20px;
 }
