--- a/style.css
+++ b/style.css
@@ -24,20 +24,20 @@ body {
   justify-content: flex-end;
   align-items: center;
 }
-.header__menu--item {
+.header__menu-item {
   margin-right: 16px;
 }
-.header__menu--item a {
+.header__menu-enlace {
   font-size: 13px;
 }
-.header__menu--item:hover {
+.header__menu-item:hover {
   text-decoration: underline;
 }
-.header__menu--item img {
+.header__menu-grid {
   width: 1rem;
   height: 1rem;
 }
-.header__menu--profile .profile__options {
+.header__menu-profile .profile-options {
   display: none;
   list-style: none;
   position: absolute;
@@ -49,19 +49,19 @@ body {
   padding: 20px;
   border-radius: 40px;
 }
-.header__menu--profile:hover .profile__options,
-.profile__options:hover {
+.header__menu-profile:hover .profile-options,
+.profile-options:hover {
   display: block;
 }
-.header__menu--item a:hover {
+.header__menu-enlace:hover {
   text-decoration: underline;
 }
-.header__menu--profile {
+.header__menu-profile {
   margin-right: 8px;
   display: flex;
   align-items: center;
 }
-.header__menu--profile img {
+.header__menu-img {
   height: 3rem;
   width: 3rem;
   margin-right: 8px;
@@ -78,26 +78,26 @@ body {
   display: flex;
   flex-direction: column;
 }
-.profile__header {
+.profile-options__header {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px 0px;
   border-bottom: 1px solid #e4e4e4;
 }
-.profile__header img {
+.profile-header__img {
   width: 80px;
   height: 80px;
 }
-.profile__header--name {
+.profile-header__name {
   font-size: 16px;
 }
-.profile__header--email {
+.profile-header__email {
   font-size: 14px;
   color: #5f6368;
   margin: 5px 0px;
 }
-.profile__header--input {
+.profile-header__input {
   width: 70%;
   background-color: white;
   border: 1px solid #b3b3b3;
@@ -107,10 +107,10 @@ body {
   text-align: center;
   color: #5f6368;
 }
-.profile__header--input:hover,
-.profile__header--input:focus,
-.profile__main--item:hover,
-.profile__main--item:focus {
+.profile-header__input:hover,
+.profile-header__input:focus,
+.profile-main__item:hover,
+.profile-main__item:focus {
   background-color: #f2f2f2;
 }
 .profile__main {
@@ -119,25 +119,30 @@ body {
   justify-content: flex-start;
   border-bottom: 1px solid #e4e4e4;
 }
-.profile__main--item {
+.profile-main__item {
   width: 100%;
   display: flex;
   padding: 10px 30px;
 }
-.profile__main--icon{
-  padding: 12px;
+.profile-main__item-img {
+  width: 50px;
+  margin-right: 6px;
 }
-.profile-main__item--info {
+.profile-main__item-icon {
+  padding: 12px;
+  width: 50px;
+}
+.profile-main__item-info {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   color: #5f6368;
 }
-.profile-main__item--name {
+.profile-main__item-name {
   font-size: 15px;
 }
-.profile-main__item--email {
+.profile-main__item-email {
   font-size: 13px;
 }
 .main {
@@ -149,7 +154,7 @@ body {
   align-items: center;
   width: 100%;
 }
-.main__search {
+.main-search {
   background-color: white;
   border: 1px solid #d9d6d9;
   border-radius: 30px;
@@ -159,53 +164,53 @@ body {
   margin: 30px 0px;
   display: flex;
 }
-.main__search:hover,
-.main__search:focus {
+.main-search:hover,
+.main-search:focus {
   -webkit-box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
   -moz-box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
   box-shadow: 0px 0px 10px 0px rgba(217, 214, 217, 1);
 }
-.main__buttons--options:hover,
-.main__buttons--options:focus {
+.main-buttons__options:hover,
+.main-buttons__options:focus {
   -webkit-box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.44);
   -moz-box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.44);
   box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.44);
 }
-.main__search--icon {
+.main-search__icon {
   height: 30px;
   display: flex;
   margin: 7px;
   padding: 5px 0px;
 }
-.main__search--input {
+.main-search__input {
   flex: 1;
   border: none;
   font-size: 16px;
 }
-.main__search--input:focus {
+.main-search__input:focus {
   outline: none;
 }
-.main__search--voince {
+.main-search__voince {
   margin-left: auto;
 }
-.main__buttons {
+.main-buttons {
   display: flex;
   justify-content: center;
 }
-.main__buttons--options {
+.main-buttons__options {
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
 }
-.main__buttons--options:last-child {
+.main-buttons__options:last-child {
   margin-left: 20px;
 }
-.main__languages {
+.main-languages {
   margin-top: 30px;
   display: flex;
   font-size: 13px;
 }
-.main__languages--link {
+.main-languages__link {
   margin-left: 10px;
 }
 .footer {
@@ -217,6 +222,8 @@ body {
   justify-content: center;
   font-size: 14px;
   border: 1px solid #e4e4e4;
+  color: #5f6368;
+  padding-left: 20px;
 }
 .footer__country {
   display: flex;
@@ -225,20 +232,16 @@ body {
   align-items: center;
   border-bottom: 1px solid #e4e4e4;
 }
-.footer__links {
+.footer-links {
   display: flex;
   flex: 1;
   align-items: center;
   justify-content: space-between;
 }
-.footer__links ul li {
+.footer-links__item {
   display: inline-block;
+  margin-right: 20px;
 }
-.footer a,
-.footer p {
-  color: #5f6368;
-  margin-left: 20px;
-}
-.footer ul:last-child a:last-child {
+.footer-links__item:last-child {
   margin-right: 20px;
 }
